# collectins

./: .gitignore  License  pyproject.toml  requirements.txt
src/collectins/: __init__.py  doublylinkedlist.py  linkedlist.py
src/collectins.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_doublylinkedlist.py  test_linkedlist.py
