[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "collectins"
version = "0.1.0"
description = "Pythonic data structures with indexing support using dunder methods"
authors = [
    { name = "Santosh Varma Addala", email = "santoshvarma2166@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["data structures", "indexing", "dunder methods", "ds", "linked list", "tree"]
dependencies = []
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/santoshvarmaaddala/"
Repository = "https://github.com/santoshvarmaaddala/collectins"
